--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "timezones",
+  "homepage": "http://AkimSolovyov.github.io/timezones",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "lodash.throttle": "^4.1.1",
     "luxon": "^1.25.0",
-    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -19,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
